--- a/QIHOT/index.html
+++ b/QIHOT/index.html
@@ -266,8 +266,14 @@
                 
                 <div class="figure">
                     <h3>Full Research Paper</h3>
-                    <div style="position: relative; width: 100%; height: 0; padding-bottom: 80%; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; overflow: hidden;">
-                        <iframe src="https://www.researchgate.net/publication/389660723_Quantum-Informational_History_Optimization_Theory_QIHOT" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;" allowfullscreen></iframe>
+                    <div style="background-color: #f5f5f5; padding: 20px; border-radius: 5px; text-align: center; margin: 20px 0;">
+                        <p style="margin-bottom: 15px; font-size: 1.1em;">The complete research paper is available on ResearchGate:</p>
+                        <a href="https://www.researchgate.net/publication/389660723_Quantum-Informational_History_Optimization_Theory_QIHOT" 
+                           target="_blank" 
+                           style="display: inline-block; padding: 12px 24px; background-color: var(--primary); color: white; text-decoration: none; border-radius: 4px; font-weight: bold; transition: background-color 0.3s ease;">
+                            View Full Paper on ResearchGate
+                        </a>
+                        <p style="margin-top: 15px; font-style: italic; color: #666;">Quantum-Informational History Optimization Theory (QIHOT)</p>
                     </div>
                 </div>
                 
